2011-01-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-cloog.c: Fix a bug in the completion of
	scatterings.

2011-01-06  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/irregular/configure.cfg: Update SVN server to
	alchemy.saclay.inria.fr.

2010-12-08  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch introduces the option --cloogify-sched. When invoked in
	conjunction of --ouput-scop, the schedules in the generated scop
	can be directly given as an input to CLooG.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/include/pocc/driver-cloog.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-pluto.c,
	* driver/pocc/driver-cloog.c,
	* driver/src/options.h,
	* driver/src/options.c: Add support for cloogify-scheds option.

2010-12-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Fix cloog-git bootstrap sequence.

2010-12-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch updates PoCC with:

	1) A new option --pluto-tile-scat, to embed the tiling in the
	scattering functions and thus leave the iteration domains
	unchanged.

	2) A new, up-to-date version of CLooG, now the default and only
	supported version: cloog-git.

	* driver/pocc/include/pocc/driver-cloog.h,
	* driver/pocc/driver-cloog.c: New. Wrapper for CLooG. Creates
	internally a CloogInput from the scoplib, and return the generated
	CLAST after calling CLooG.
	* driver/pocc/Makefile.am: Update accoringly.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Support option --pluto-tile-scat. If
	specified, pluto will embed the tiling in the schedule, without
	modifying the iteration domains.

	* driver/pocc/driver-codegen.c,
	* driver/pocc/driver-clastops.c,
	* driver/pocc/include/pocc/driver-clastops.h,